docs/content/v0.5/1.getting-started/3.quick-start.md
# Quick Start

After [installing the package](/nuxt-auth/getting-started/installation), add the package to your `nuxt.config.ts`:

```ts
export default defineNuxtConfig({
   modules: ['@sidebase/nuxt-auth'],
})
```

Then create the authentication handler (`NuxtAuthHandler`) that will expose the API endpoints for handling all authentication-related requests and add at least one [authentication provider](https://next-auth.js.org/providers/):

```ts
// file: ~/server/api/auth/[...].ts
import { NuxtAuthHandler } from '#auth'
import GithubProvider from 'next-auth/providers/github'

export default NuxtAuthHandler({
    providers: [
        // @ts-expect-error You need to use .default here for it to work during SSR. May be fixed via Vite at some point
        GithubProvider.default({
           clientId: 'enter-your-client-id-here',
           clientSecret: 'enter-your-client-secret-here'
        })
    ]
})
```

That's it! You can now use all user-related functionality, for example:

::alert{type="info"}
Prior to v0.5.0 `useAuth()` was called `useSession()`.
::
::code-group
```ts [Application side]
// file: e.g ~/pages/login.vue
const { status, data, signIn, signOut } = useAuth()

status.value // Session status: `unauthenticated`, `loading`, `authenticated`
data.value // Session data, e.g., expiration, user.email, ...

await signIn() // Sign in the user
await signOut() // Sign out the user
```
```ts [Server side]
// file: e.g: ~/server/api/session.get.ts
import { getServerSession } from '#auth'

export default eventHandler(async (event) => {
   const session = await getServerSession(event)
   if (!session) {
      return { status: 'unauthenticated!' }
   }
   return { status: 'authenticated!', text: 'im protected by an in-endpoint check', session }
})
```
::

To learn how to protect pages read [about the application-side usage](/nuxt-auth/application-side), to learn how to protect server-routes and API endpoints read [about the server-side usage](/nuxt-auth/server-side).
